--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,8 @@ yarn-error.log*
 # Editor directories and files
 .idea
 .vscode
-.sublime-project
+*.sublime-workspace
+*.sublime-project
 *.suo
 *.ntvs*
 *.njsproj
