--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "vue": "^2.4.2",
+    "vue-i18n": "^7.3.2",
     "vue-router": "^2.7.0"
   },
   "devDependencies": {
