--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "moment": "^2.22.2",
     "vue": "^2.4.2",
     "vue-i18n": "^7.3.2",
     "vue-router": "^2.7.0"
