--- a/package.json
+++ b/package.json
@@ -1,16 +1,23 @@
 {
   "name": "clement-rivaille",
   "version": "2.0.0",
+  "private": true,
   "description": "Portfolio page",
   "author": "Clément Rivaille <rivaille.clement@orange.fr>",
-  "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tailwindcss/postcss7-compat": "^2.0.2",
+    "@tonaljs/tonal": "^4.6.5",
+    "autoprefixer": "^9",
     "core-js": "^3.6.5",
+    "motion": "^10.5.0",
+    "postcss": "^7",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
+    "tone": "^14.7.77",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
@@ -33,6 +40,7 @@
     "node-sass": "^4.12.0",
     "prettier": "^2.2.1",
     "sass-loader": "^8.0.2",
-    "typescript": "~4.1.5"
+    "typescript": "~4.1.5",
+    "vue-cli-plugin-tailwind": "^2.0.6"
   }
 }
