--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,8 @@ on:
     branches: [develop]
     tags:
       - v*
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
