--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,6 @@
 name: Build and Deploy
 on:
   push:
-    branches: [develop]
     tags:
       - v*
   # Allows you to run this workflow manually from the Actions tab
@@ -27,4 +26,4 @@ jobs:
         with:
           branch: master # The branch the action should deploy to.
           folder: dist # The folder the action should deploy.
-          commit_message: deploy
+          commit-message: deploy from new version
