--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "tone": "^14.7.77",
     "vue": "^3.0.0",
     "vue-i18n": "^9.1.0",
-    "vue-router": "^4.0.0-0",
+    "vue-router": "^4.1.6",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
